--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,600;1,600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body class="font-sans font-normal">
     <div id="root"></div>
